# clarify

./: .env  .env.example  .gitignore  Makefile  OVERVIEW.MD  README.md  TODO_PLAN.md  pyproject.toml
.claude/: settings.local.json
configs/: default.yaml  report_baselines.yaml
configs/method/: closed_book.yaml  direct_answer.yaml  generic_clarify.yaml  generic_hedge.yaml  hedge.yaml  rag_direct.yaml  resample_clarify.yaml  revise_verify.yaml  targeted_clarify.yaml
configs/model/: qwen25_7b.yaml  tinker_gpt_oss_120b.yaml  tinker_qwen3_30b.yaml  tinker_qwen3_4b.yaml
configs/retrieval/: bge_faiss.yaml
docs/: end_to_end.md  job_parallelism.md  paper.md  training.md
paper/: experiment_log.md  main.tex  references.bib
paper/sections/: abstract.tex  conclusion.tex  datasets.tex  evaluation.tex  introduction.tex  limitations.tex  methods.tex  related_work.tex  reproducibility.tex  results.tex
presentation/: README.md  spotlight.html
scripts/: aggregate_baseline_matrix.py  audit_agreement.py  build_clarifybench.py  build_paper.py  build_statute_index.py  demo_example.py  download_housingqa.py  download_infoquest.py  export_audit.py  export_teacher_rollouts.py  fit_intent_calibrator.py  paper_tables.py  plan_jobs.py  preflight.py  prepare_data.py  read_manifest_value.py  retry_forever.py  run_ablation.py  run_baseline_matrix.py  run_dev_sweep.py  run_eval.py  run_inference.py  run_k_sensitivity.py  run_report_pipeline.py  run_research_pipeline.py  run_sharded_leaf.py  run_student_dpo.py  run_student_eval.py  run_student_sft.py  update_sensitivity_tables.py  validate_data.py
src/: __init__.py
src/data/: __init__.py  clarifybench.py  clarifybench_v1.py  housingqa.py  infoquest.py  legalqa_local.py  report_data.py  schema.py
src/eval/: __init__.py  attribution_metrics.py  judge.py  metrics.py  retrieval_metrics.py  runner.py  selective_metrics.py  sharding.py
src/llm/: __init__.py  generator.py  prompts.py  schemas.py
src/methods/: __init__.py  closed_book.py  direct_answer.py  generic_clarify.py  generic_hedge.py  hedge.py  rag_direct.py  resample_clarify.py  revise_verify.py  targeted_clarify.py
src/retrieval/: __init__.py  embedder.py  faiss_index.py  query_rewrite.py  rerank.py  retrieve.py
src/train/: __init__.py  distillation.py  sft.py
src/understand/: __init__.py  ambiguity_detector.py  clarification_generator.py  confidence_calibrator.py  intent_model.py  intent_stability.py  resample_controller.py  strategy_selector.py
src/utils/: config.py  io.py  logging.py  seed.py
tests/: test_ambiguity_detector.py  test_claim_extraction.py  test_data.py  test_intent_model.py  test_intent_stability.py  test_methods_smoke.py  test_report_artifacts.py  test_retrieval.py  test_runner.py  test_sharding.py  test_structured_output.py  test_tinker_generator.py  test_training_data.py
(+6 files in other folders)
