[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dont-bluff-verify-legal"
version = "0.1.0"
description = "Research-first legal QA repository for verification-oriented revision on HousingQA."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "dont-bluff-verify-legal contributors"}
]
dependencies = [
  "datasets>=2.19.0",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "sentence-transformers>=3.0.0",
  "torch>=2.2.0",
  "transformers>=4.41.0",
  "typer>=0.12.3",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]
peft = [
  "peft>=0.11.0",
  "accelerate>=0.31.0",
]
vllm = [
  "vllm>=0.5.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

