[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clarify"
version = "0.1.0"
description = "Research repository for studying when and how an assistant should clarify ambiguous user requests instead of answering prematurely."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}
authors = [
  {name = "clarify contributors"}
]
dependencies = [
  "datasets>=2.19.0",
  "numpy>=1.26.0",
  "orjson>=3.10.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "tinker",
  "typer>=0.12.3",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
